--- a/ARBuild/app/src/main/res/values/strings.xml
+++ b/ARBuild/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ARBuild</string>
     <string name="scan_barcode">Scan Barcode</string>
+    <string name="instructions_text">Instructions</string>
+    <string name="planner_string">Planner</string>
 </resources>
