Develop frontend panes--calibration

--- a/ARBuild/app/src/main/res/values/strings.xml
+++ b/ARBuild/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="scan_barcode">Scan Barcode</string>
     <string name="instructions_text">Instructions</string>
     <string name="planner_string">Planner</string>
+    <string name="calibrating_string">Calibrating...</string>
+    <string name="calibrating_substring">Please move phone around</string>
 </resources>
