Add Step Fragment

--- a/ARBuild/app/src/main/res/values/strings.xml
+++ b/ARBuild/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="calibrating_substring">Please move phone around</string>
     <string name="congrats_string">Congrats, you\'re done!</string>
     <string name="do_next_string">What would you like to do next?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
